Include sys/types.h and unistd.h from a single place (refactoring)
Also, remove checking of GC_NO_TYPES macro.

* CMakeLists.txt (HAVE_SYS_TYPES_H): Set if sys/types.h exists.
* CMakeLists.txt [!WIN32] (HAVE_UNISTD_H): Set if unistd.h exists.
* CMakeLists.txt [HAVE_SYS_TYPES_H] (HAVE_SYS_TYPES_H): Define macro.
* CMakeLists.txt [!WIN32 && HAVE_UNISTD_H] (HAVE_UNISTD_H): Likewise.
* alloc.c [!GC_NO_TYPES && !SN_TARGET_PSP2 && !__CC_ARM]: Do not
include sys/types.h.
* dyn_load.c [!MACOS && !GC_NO_TYPES && !SN_TARGET_PSP2 && !_WIN32_WCE
&& !__CC_ARM]: Likewise.
* include/private/gc_priv.h [DGUX || BSD_TIME]: Likewise.
* misc.c [UNIX_LIKE || CYGWIN32 || SYMBIAN || CONSOLE_LOG && MSWIN32]:
Likewise.
* os_dep.c [!OS2 && !PCR && !AMIGA && !MACOS && !MSWINCE
&& !SN_TARGET_ORBIS && !SN_TARGET_PSP2 && !__CC_ARM || MMAP_SUPPORTED
|| ADD_HEAP_GUARD_PAGES || LINUX_STACKBOTTOM || FREEBSD_STACKBOTTOM
|| !NN_PLATFORM_CTR && !MSWIN32 && !MSWINCE && !MSWIN_XBOX1
|| PROC_VDB]: Likewise.
* pthread_support.c [GC_PTHREADS]: Likewise.
* dyn_load.c [(DGUX || HURD || NACL || SCO_ELF || (ANY_BSD || LINUX)
&& __ELF__) && USE_PROC_FOR_LIBRARIES]: Do not include unistd.h.
* include/private/gcconfig.h [HPUX || SOLARIS || I386 && DGUX
|| ALPHA && OSF1 || !ANY_MSWIN && !GETPAGESIZE && (AIX || ANY_BSD
|| DARWIN || IRIX5 || LINUX || KOS || SOLARIS)]: Likewise.
* misc.c [!GC_NO_TYPES && !SN_TARGET_PSP2 && !AMIGA && !MSWIN32
&& !MSWIN_XBOX1 && !__CC_ARM]: Likewise.
* os_dep.c [!OS2 && !PCR && !AMIGA && !MACOS && !MSWINCE && !MSWIN32
&& !SN_TARGET_ORBIS && !SN_TARGET_PSP2 && !__CC_ARM && !MSWIN_XBOX1
|| FREEBSD_STACKBOTTOM || !NN_PLATFORM_CTR && !MSWIN32 && !MSWINCE
&& !MSWIN_XBOX1 || NEED_CALLINFO && LINUX]: Likewise.
* pthread_stop_world.c [PTHREAD_STOP_WORLD_IMPL]: Likewise.
* pthread_support.c [GC_PTHREADS && !GC_WIN32_PTHREADS]: Likewise.
* include/private/gcconfig.h [I386 && DGUX] (GETPAGESIZE): Move
definition down.
* include/private/gcconfig.h [HAVE_SYS_TYPES_H || !(AMIGA || MACOS
|| MSWINCE ||

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -506,6 +506,18 @@ if (NOT HAVE_EXECINFO_H)
   add_definitions("-DGC_MISSING_EXECINFO_H")
 endif()
 
+check_include_file(sys/types.h HAVE_SYS_TYPES_H)
+if (HAVE_SYS_TYPES_H)
+  add_definitions("-DHAVE_SYS_TYPES_H")
+endif()
+
+if (NOT WIN32)
+  check_include_file(unistd.h HAVE_UNISTD_H)
+  if (HAVE_UNISTD_H)
+    add_definitions("-DHAVE_UNISTD_H")
+  endif()
+endif()
+
 # Check for getcontext (uClibc can be configured without it, for example).
 if (NOT (BORLAND OR MSVC))
   check_function_exists(getcontext HAVE_GETCONTEXT)
