Mention proper CURSES value in Makefile.direct to build cord/de test (documentation)
* Makefile.direct (CURSES): Add comment about the proper value for
Win32.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -154,6 +154,7 @@ UTILS= if_mach$(EXEEXT) if_not_there$(EXEEXT) threadlibs$(EXEEXT)
 
 # Libraries needed for curses applications.  Only needed for de.
 # It might also require -ltermlib on some targets.
+# For Win32, it should be set to: -lgdi32
 CURSES?= -lcurses
 
 # The following is irrelevant on most systems.  But a few
