--- a/Makefile.direct
+++ b/Makefile.direct
@@ -379,7 +379,8 @@ if_not_there$(EXEEXT): $(srcdir)/tools/if_not_there.c
 clean:
 	rm -f *.a *.i *.o *.exe tests/*.o gctest gctest_dyn_link test_cpp \
 	      setjmp_test mon.out gmon.out a.out core if_not_there if_mach \
-	      base_lib c++ $(CORD_OBJS) cordtest de cords dont_ar_* threadlibs
+	      base_lib c++ $(CORD_OBJS) cordtest de cords dont_ar_* \
+	      threadlibs *.log cordtst*.tmp
 	-rm -f *~
 
 gctest$(EXEEXT): tests/test.o base_lib $(UTILS)
