--- a/.travis.yml
+++ b/.travis.yml
@@ -596,6 +596,7 @@ jobs:
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-cplusplus --enable-gc-assertions --enable-static"
+    - CFLAGS_EXTRA="-D VERY_SMALL_CONFIG"
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
