Report 'none' if no machine-dependent code-to-use detected in configure
* configure.ac [x$machdep==x]: Report "none" as result of checking
which machine-dependent code should be used; do not update addobjs
variable.

--- a/configure.ac
+++ b/configure.ac
@@ -644,8 +644,12 @@ case "$host" in
     machdep="ia64_save_regs_in_stack.lo"
     ;;
 esac
-AC_MSG_RESULT($machdep)
-addobjs="$addobjs $machdep"
+if test "x$machdep" = x; then
+  AC_MSG_RESULT(none)
+else
+  AC_MSG_RESULT($machdep)
+  addobjs="$addobjs $machdep"
+fi
 AC_SUBST(addobjs)
 AC_SUBST(addlibs)
 
