Detect presence of pthread_sigmask() in configure and cmake scripts
* CMakeLists.txt [enable_threads && CMAKE_USE_PTHREADS_INIT && !(APPLE
|| CYGWIN || MSYS)] (HAVE_PTHREAD_SIGMASK): Set if C source compiles
for sigset_t and pthread_sigmask(); add comment.
* CMakeLists.txt [enable_threads && CMAKE_USE_PTHREADS_INIT && !(APPLE
|| CYGWIN || MSYS) && HAVE_PTHREAD_SIGMASK] (GC_HAVE_PTHREAD_SIGMASK):
Define preprocessor macro.
* configure.ac [$THREADS==posix && !$darwin_threads && !$win32_threads]
(GC_HAVE_PTHREAD_SIGMASK): Define preprocessor macro if C source
compiles for sigset_t and pthread_sigmask(); add comment.
* include/gc/gc_pthread_redirects.h [!GC_NO_PTHREAD_SIGMASK
&& GC_HAVE_PTHREAD_SIGMASK] (GC_pthread_sigmask): Declare.
* include/gc/gc_pthread_redirects.h [!GC_NO_PTHREAD_SIGMASK
&& !(GC_PTHREAD_SIGMASK_NEEDED || _BSD_SOURCE || _GNU_SOURCE
|| _NETBSD_SOURCE || _POSIX_C_SOURCE>=199506L || _XOPEN_SOURCE>=500
|| __POSIX_VISIBLE>=199506)] (GC_NO_PTHREAD_SIGMASK): Do not define
if GC_HAVE_PTHREAD_SIGMASK.
* include/private/gc_priv.h [GC_HAVE_PTHREAD_SIGMASK && !_GNU_SOURCE]
(_GNU_SOURCE): Define.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -545,6 +545,22 @@ if (NOT (APPLE OR CYGWIN OR WIN32))
   endif(HAVE_DL_ITERATE_PHDR)
 endif()
 
+# Check for pthread_sigmask and sigset_t.
+if (enable_threads AND CMAKE_USE_PTHREADS_INIT)
+  if (NOT (APPLE OR CYGWIN OR MSYS))
+    check_c_source_compiles("
+#define _GNU_SOURCE 1\n
+#include <pthread.h>\n
+#include <signal.h>\n
+int main(void) { sigset_t t; (void)pthread_sigmask(SIG_BLOCK, 0, &t); return 0; }"
+      HAVE_PTHREAD_SIGMASK)
+    if (HAVE_PTHREAD_SIGMASK)
+      # Define to use 'pthread_sigmask' function if needed.
+      add_definitions("-DGC_HAVE_PTHREAD_SIGMASK")
+    endif(HAVE_PTHREAD_SIGMASK)
+  endif()
+endif()
+
 check_symbol_exists(sigsetjmp setjmp.h HAVE_SIGSETJMP)
 if (NOT HAVE_SIGSETJMP)
   add_definitions("-DGC_NO_SIGSETJMP")
