--- a/configure.ac
+++ b/configure.ac
@@ -123,8 +123,7 @@ AC_ARG_ENABLE(parallel-mark,
           AC_MSG_ERROR([Parallel mark requires --enable-threads=x spec])
         fi
         ;;
-    esac ]
-)
+    esac])
 
 AC_ARG_ENABLE(cplusplus,
     [AC_HELP_STRING([--enable-cplusplus], [install C++ support])])
@@ -798,8 +797,8 @@ AC_ARG_ENABLE(gc-debug,
       i[3456]86-*-dgux*)
         AC_DEFINE(MAKE_BACK_GRAPH)
       ;;
-    esac ]
-  fi)
+    esac
+  fi ])
 AM_CONDITIONAL([MAKE_BACK_GRAPH], [test x"$enable_gc_debug" = xyes])
 AM_CONDITIONAL([KEEP_BACK_PTRS], [test x"$keep_back_ptrs" = xtrue])
 
