Turn on MAKE_BACK_GRAPH for all Linux architectures in cmake and configure
Previously it was enabled only for x86, x64 and ia64.

* CMakeLists.txt [enable_gc_debug] (MAKE_BACK_GRAPH): Define C macro
all Linux arch (".*-.*-.*linux.*").
* CMakeLists.txt [enable_gc_debug && HOST!="e2k-.*-linux.*"]
(SAVE_CALL_COUNT): Likewise.
* configure.ac [$enable_gc_debug==yes] (MAKE_BACK_GRAPH): Define in
a single place (in a standalone case statement); define for all Linux
arch (*-*-*linux*).
* configure.ac [$enable_gc_debug==yes && $host!=e2k-*-linux*]
(SAVE_CALL_COUNT): Likewise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -334,9 +334,9 @@ endif()
 
 if (enable_gc_debug)
   add_definitions("-DDBG_HDRS_ALL -DKEEP_BACK_PTRS")
-  if (HOST MATCHES i.86-.*-dgux.*|ia64-.*-linux.*|i586-.*-linux.*|i686-.*-linux.*|x86-.*-linux.*|x86_64-.*-linux.*)
+  if (HOST MATCHES i.86-.*-dgux.*|.*-.*-.*linux.*)
     add_definitions("-DMAKE_BACK_GRAPH")
-    if (HOST MATCHES .*-.*-.*linux.*)
+    if (HOST MATCHES .*-.*-.*linux.* AND NOT (HOST MATCHES e2k-.*-linux.*))
       add_definitions("-DSAVE_CALL_COUNT=8")
     endif()
     set(SRC ${SRC} backgraph.c)
