Support pointer mask/shift set at runtime
This is only enabled by "configure --enable-dynamic-pointer-mask" or
by "cmake -Denable_dynamic_pointer_mask=ON".

* CMakeLists.txt (enable_dynamic_pointer_mask): New option (OFF by
default).
* CMakeLists.txt [enable_dynamic_pointer_mask] (DYNAMIC_POINTER_MASK):
Define C macro.
* configure.ac [$enable_dynamic_pointer_mask==yes]
(DYNAMIC_POINTER_MASK): Likewise.
* configure.ac (dynamic-pointer-mask): New AC_ARG_ENABLE.
* docs/README.macros (POINTER_MASK, POINTER_SHIFT): Update description.
* docs/README.macros (DYNAMIC_POINTER_MASK): Document.
* include/gc/gc_mark.h (GC_set_pointer_mask, GC_get_pointer_mask,
GC_set_pointer_shift, GC_get_pointer_shift): New public function
declaration.
* include/private/gc_priv.h [DYNAMIC_POINTER_MASK]
(GC_arrays._pointer_mask, GC_arrays._pointer_shift): New fields; add
comment.
* include/private/gc_priv.h [DYNAMIC_POINTER_MASK] (GC_pointer_mask,
GC_pointer_shift): Define.
* include/private/gcconfig.h [!POINTER_MASK && POINTER_SHIFT]
(POINTER_MASK): Use GC_WORD_MAX.
* include/private/gcconfig.h [!FIXUP_POINTER && DYNAMIC_POINTER_MASK]
(NEED_FIXUP_POINTER): Likewise.
* include/private/gcconfig.h [!FIXUP_POINTER && DYNAMIC_POINTER_MASK]
(FIXUP_POINTER): Define using GC_pointer_mask and GC_pointer_shift.
* include/private/gcconfig.h [!FIXUP_POINTER && DYNAMIC_POINTER_MASK]
(POINTER_MASK, POINTER_SHIFT): Undefine.
* mark.c (GC_set_pointer_mask, GC_get_pointer_mask,
GC_set_pointer_shift, GC_get_pointer_shift): Implement.
* misc.c [DYNAMIC_POINTER_MASK] (GC_init): Set GC_pointer_mask to
GC_WORD_MAX if the variable is zero.
* tests/gctest.c [GC_PTHREADS] (main): Call GC_set_pointer_mask(),
GC_get_pointer_mask(), GC_set_pointer_shift(), GC_get_pointer_shift()
(before GC_COND_INIT).

--- a/configure.ac
+++ b/configure.ac
@@ -983,6 +983,14 @@ fi
 AM_CONDITIONAL(ENABLE_DISCLAIM,
     [test x"$enable_disclaim" != xno])
 
+AC_ARG_ENABLE(dynamic-pointer-mask,
+    [AS_HELP_STRING([--enable-dynamic-pointer-mask],
+        [support pointer mask/shift set at runtime])])
+if test "${enable_dynamic_pointer_mask}" = yes; then
+    AC_DEFINE(DYNAMIC_POINTER_MASK, 1,
+              [Define to support pointer mask/shift set at runtime.])
+fi
+
 AC_ARG_ENABLE(large-config,
     [AS_HELP_STRING([--enable-large-config],
         [optimize for large (> 100 MB) heap or root set])])
