--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ option(enable_java_finalization "Support for java finalization" ON)
 option(enable_atomic_uncollectable "Support for atomic uncollectible allocation" ON)
 option(enable_redirect_malloc "Redirect malloc and friends to GC routines" OFF)
 option(enable_disclaim "Support alternative finalization interface" ON)
+option(enable_dynamic_pointer_mask "Support pointer mask/shift set at runtime" OFF)
 option(enable_large_config "Optimize for large heap or root set" OFF)
 option(enable_gc_assertions "Enable collector-internal assertion checking" OFF)
 option(enable_mmap "Use mmap instead of sbrk to expand the heap" OFF)
@@ -322,6 +323,10 @@ endif(enable_gcj_support)
 if (enable_disclaim)
   add_definitions("-DENABLE_DISCLAIM")
   set(SRC ${SRC} fnlz_mlc.c)
+endif()
+
+if (enable_dynamic_pointer_mask)
+  add_definitions("-DDYNAMIC_POINTER_MASK")
 endif()
 
 if (enable_java_finalization)
