--- a/.travis.yml
+++ b/.travis.yml
@@ -261,7 +261,7 @@ jobs:
         - gcc-multilib
     compiler: gcc
     env:
-    - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2"
+    - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2 -D USE_RWLOCK"
     - CONF_OPTIONS="--enable-gc-assertions --enable-mmap"
   - os: osx
     env:
@@ -348,7 +348,7 @@ jobs:
     - CONF_OPTIONS="--enable-gc-assertions"
   - compiler: clang
     env:
-    - CFLAGS_EXTRA="-D MARK_BIT_PER_OBJ"
+    - CFLAGS_EXTRA="-D MARK_BIT_PER_OBJ -D USE_RWLOCK"
     - CONF_OPTIONS="--enable-cplusplus"
   - compiler: gcc
     env:
