Provide enable_rwlock option in configure and cmake scripts
Issue #473 (bdwgc).

Passing "--enable-rwlock" option to configure or "-Denable_rwlock=ON"
option to cmake defines USE_RWLOCK macro, thus enabling the reader mode
of the allocator lock.  Should be used only if the platform supports
the relevant locking primitives.

* CMakeLists.txt (enable_rwlock): New option (off by default).
* CMakeLists.txt [enable_rwlock] (USE_RWLOCK): Define C macro.
* configure.ac [$enable_rwlock=yes] (USE_RWLOCK): Likewise.
* configure.ac (rwlock): New AC_ARG_ENABLE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ option(enable_threads "Support threads" ${default_enable_threads})
 option(enable_parallel_mark "Parallelize marking and free list construction" ON)
 option(enable_thread_local_alloc "Turn on thread-local allocation optimization" ON)
 option(enable_threads_discovery "Enable threads discovery in GC" ON)
+option(enable_rwlock "Enable reader mode of the allocator lock" OFF)
 option(enable_throw_bad_alloc_library "Turn on C++ gctba library build" ON)
 option(enable_gcj_support "Support for gcj" ON)
 option(enable_sigrt_signals "Use SIGRTMIN-based signals for thread suspend/resume" OFF)
@@ -392,6 +393,11 @@ endif()
 
 if (NOT enable_threads_discovery)
   add_definitions("-DGC_NO_THREADS_DISCOVERY")
+endif()
+
+if (enable_rwlock)
+  # Use rwlock for the allocator lock instead of mutex.
+  add_definitions("-DUSE_RWLOCK")
 endif()
 
 if (enable_checksums)
