--- a/.travis.yml
+++ b/.travis.yml
@@ -403,7 +403,7 @@ jobs:
     - CONF_OPTIONS="--enable-cplusplus --disable-shared --enable-rwlock --enable-static"
   - os: osx
     env:
-    - CONF_OPTIONS="--enable-large-config --enable-cplusplus --disable-handle-fork"
+    - CONF_OPTIONS="--enable-large-config --enable-cplusplus --disable-gc-debug --disable-handle-fork"
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
       apt:
