AppVeyor CI: Do not show Windows message box on error in dmc build

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,7 +46,7 @@ environment:
   - TARGET: djgpp-no-make
     CFLAGS_EXTRA: -O3 -DALL_INTERIOR_POINTERS -DNO_EXECUTE_PERMISSION -DENABLE_DISCLAIM -DGC_ATOMIC_UNCOLLECTABLE -DGC_GCJ_SUPPORT
   - TARGET: dmc
-    CFLAGS_EXTRA: -s
+    CFLAGS_EXTRA: -s -DNO_MSGBOX_ON_ERROR
   - TARGET: mingw
   - TARGET: mingw
     CFLAGS_EXTRA: -D GC_THREADS -D THREAD_LOCAL_ALLOC -D PARALLEL_MARK -D GC_ASSERTIONS -D EMPTY_GETENV_RESULTS -D GC_GCJ_SUPPORT -D USE_MUNMAP -D LARGE_CONFIG -D NO_MSGBOX_ON_ERROR
