Workaround MS Clang failure to compile de_win.rc (a cherry-pick of commit 98705c8fa from 'master')
* CMakeLists.txt [build_cord && WIN32 && CMAKE_C_COMPILER_ID!=Clang]
(DE_WIN_RC): New variable (set to "cord/tests/de_win.rc"); add comment.
* CMakeLists.txt [build_cord && WIN32] (de): Use DE_WIN_RC variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -723,8 +723,12 @@ if (build_tests)
     add_test(NAME cordtest COMMAND cordtest)
 
     if (WIN32 AND NOT CYGWIN)
+      if (NOT (CMAKE_C_COMPILER_ID STREQUAL "Clang"))
+        # Workaround MS Clang failure to compile a resource file.
+        set(DE_WIN_RC cord/tests/de_win.rc)
+      endif()
       add_executable(de cord/tests/de.c cord/tests/de_win.c
-                     cord/tests/de_win.rc)
+                     ${DE_WIN_RC})
       set_target_properties(de PROPERTIES WIN32_EXECUTABLE TRUE)
       target_link_libraries(de PRIVATE cord gc gdi32)
     endif()
