Workaround 'malloc inconsistent dll linkage' MSVC error in CMake script
Use source-level redirection of malloc/realloc/free() for Windows
builds.

* CMakeLists.txt [enable_redirect_malloc && WIN32]
(REDIRECT_MALLOC_IN_HEADER): Add C macro definition.
* CMakeLists.txt [enable_redirect_malloc && WIN32]
(GC_USE_DLOPEN_WRAP): Do not define C macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -321,7 +321,11 @@ if (enable_redirect_malloc)
   else()
     add_definitions("-DREDIRECT_MALLOC=GC_malloc")
   endif()
-  add_definitions("-DGC_USE_DLOPEN_WRAP")
+  if (WIN32)
+    add_definitions("-DREDIRECT_MALLOC_IN_HEADER")
+  else()
+    add_definitions("-DGC_USE_DLOPEN_WRAP")
+  endif()
 endif(enable_redirect_malloc)
 
 if (enable_munmap)
