--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: ${{ matrix.os }} ${{ matrix.c_compiler }} thr:${{ matrix.enable_threads }} rwlock::${{ matrix.enable_rwlock }} redir:${{ matrix.redirect_malloc }} dll:${{ matrix.shared_libs }}
+    name: ${{ matrix.os }} ${{ matrix.c_compiler }} thr:${{ matrix.enable_threads }} rwlock::${{ matrix.enable_rwlock }} redir:${{ matrix.redirect_malloc }} dll:${{ matrix.shared_libs }} cpp::${{ matrix.enable_cplusplus }}
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -15,6 +15,8 @@ jobs:
       matrix:
         os: [ macos-latest, ubuntu-latest, windows-latest ]
         c_compiler: [ cl, clang, gcc ]
+        cxx_compiler: [ cl, clang++, g++ ]
+        enable_cplusplus: [ off, on ]
         build_type: [ Release ]
         disable_gc_debug: [ off ]
         gc_assertions: [ off ]
@@ -32,6 +34,31 @@ jobs:
           c_compiler: cl
         - enable_threads: off
           enable_rwlock: on
+        - c_compiler: cl
+          cxx_compiler: clang++
+        - c_compiler: cl
+          cxx_compiler: g++
+        - c_compiler: clang
+          cxx_compiler: cl
+        - c_compiler: clang
+          cxx_compiler: g++
+        - c_compiler: gcc
+          cxx_compiler: cl
+        - c_compiler: gcc
+          cxx_compiler: clang++
+        - os: macos-latest
+          enable_cplusplus: off
+        - os: ubuntu-latest
+          enable_cplusplus: off
+        - os: windows-latest
+          c_compiler: cl
+          enable_cplusplus: off
+        - os: windows-latest # TODO: replacement operator cannot be inline
+          c_compiler: clang
+          enable_cplusplus: on
+        - os: windows-latest
+          c_compiler: gcc
+          enable_cplusplus: off
         - os: windows-latest # TODO: support dependency on libatomic_ops
           c_compiler: cl
           enable_threads: on
@@ -73,9 +100,11 @@ jobs:
         ${{ matrix.cmake_generator_opt }}
         -DBUILD_SHARED_LIBS=${{ matrix.shared_libs }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -Dbuild_tests=ON
         -Ddisable_gc_debug=${{ matrix.disable_gc_debug }}
+        -Denable_cplusplus=${{ matrix.enable_cplusplus }}
         -Denable_gc_assertions=${{ matrix.gc_assertions }}
         -Denable_large_config=${{ matrix.large_config }}
         -Denable_redirect_malloc=${{ matrix.redirect_malloc }}
