--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -65,6 +65,9 @@ jobs:
         - os: macos-latest # FIXME: enable this after fixing assert fail
           enable_threads: on
           redirect_malloc: on
+        - os: macos-latest # FIXME: KERN_PROTECTION_FAILURE while world stopped
+          enable_threads: on
+          redirect_malloc: off
         include:
         - os: windows-latest
           c_compiler: gcc
