--- a/.travis.yml
+++ b/.travis.yml
@@ -745,10 +745,10 @@ script:
   fi
 - if [[ "$CMAKE_OPTIONS" != "" ]]; then
     cmake $CMAKE_OPTIONS -Dbuild_tests=ON -Denable_werror=ON -Werror=dev .
-    && cmake --build . $CMAKE_BUILD_OPTIONS;
+    && cmake --build . $CMAKE_BUILD_OPTIONS --parallel;
   fi
 - if [[ "$CMAKE_OPTIONS" != "" ]]; then
-    ctest -j4 -V;
+    ctest --verbose --parallel 4;
   fi
 - if [[ "$CC_FOR_CHECK" != "" ]]; then
     make -f $MAKEFILE_NAME $MAKEFILE_TARGETS_CHECK CC=$CC_FOR_CHECK
